--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ license = {text = "GPL-3.0"}
 keywords = ["valorant", "api", "auth"]
 dependencies = [
     "typer[all]",
+    "rich",
     "ValLib",
     "ValVault",
     "ValConfig",
